# monkey-expense-tracker

./: .env.example  .gitignore  README.md  app.py  config.py  constants.py  expense.py  main.py  pyproject.toml
core/: config.py  expense.py  utils.py
income/: .income.example.json
pages/: __init__.py  custom_range_spending.py  home.py  monthly_spending.py
utils/: app_functions.py  config.py  expense.py
