[project]
name = "expense"
version = "0.1.0"
description = "Project to control my monthly expenses"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pandas>=2.3.2",
    "ruff>=0.13.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]

[tool.ruff]
line-length = 90

[tool.ruff.lint]
extend-select = ["I"] # Include "I" for isort
